--- a/My Social Network/src/main/webapp/resources/css/main.css
+++ b/My Social Network/src/main/webapp/resources/css/main.css
@@ -1,7 +1,8 @@
 body{
     display: table;
     width: 100%;
-    height: 1000%;
+    height: 100%;
+    min-font-size: 100%;
     min-height: 100%;
     -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
     box-shadow: inset 0 0 100px rgba(0,0,0,.5);
@@ -26,7 +27,7 @@ header .userside {
 }
 
 .content {
-    margin-top: 70px;
+    margin-top: 100px;
 }
 
 .site-wrapper {
